--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "esri-loader": "^2.5.0",
     "http-server": "^0.11.1",
+    "proj4": "^2.5.0",
     "vue": "^2.5.17",
     "vuetify": "^1.3.0"
   },
