--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ language: node_js
 node_js:
     - "8"
 stages:
-  - lint
   - test
   - build
   - name: deploy
@@ -28,14 +27,11 @@ before_install:
 
 jobs:
   include:
-    - stage: lint
-      script:
-        - npm run lint
-
-    # Do unit testing
+    # TODO: unit testing
     - stage: test
       script:
-        - npm run test-ci
+        - npm run lint
+    #     - npm run test-ci
 
     - stage: build
       script:
