--- a/web/package.json
+++ b/web/package.json
@@ -11,26 +11,27 @@
   "dependencies": {
     "esri-loader": "^2.5.0",
     "http-server": "^0.11.1",
-    "proj4": "^2.5.0",
-    "vue": "^2.5.17",
-    "vuetify": "^1.3.0"
-  },
-  "devDependencies": {
+    "@vue/cli-service": "^3.0.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "vue-cli-plugin-vuetify": "^0.4.5",
+    "vuetify-loader": "^1.0.5",
+    "vue-template-compiler": "^2.5.17",
+    "proj4": "^2.5.0",
+    "vue": "^2.5.17",
+    "vuetify": "^1.3.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
+  },
+  "devDependencies": {
+
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0-beta.4",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.4.5",
-    "vue-template-compiler": "^2.5.17",
-    "vuetify-loader": "^1.0.5"
+    "eslint-plugin-vue": "^5.0.0-beta.4"
   },
   "postcss": {
     "plugins": {
