--- a/web/package.json
+++ b/web/package.json
@@ -9,22 +9,24 @@
     "test-ci": "echo 1"
   },
   "dependencies": {
-    "esri-loader": "^2.5.0",
-    "http-server": "^0.11.1",
-    "@vue/cli-service": "^3.0.5",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
-    "vue-cli-plugin-vuetify": "^0.4.5",
-    "vuetify-loader": "^1.0.5",
-    "vue-template-compiler": "^2.5.17",
+    "@vue/cli-service": "^3.0.5",
+    "async": "^2.6.1",
+    "esri-loader": "^2.5.0",
+    "http-server": "^0.11.1",
     "proj4": "^2.5.0",
-    "vue": "^2.5.17",
-    "vuetify": "^1.3.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "vue": "^2.5.17",
+    "vue-cli-plugin-vuetify": "^0.4.5",
+    "vue-json-excel": "^0.2.96",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify": "^1.3.0",
+    "vuetify-loader": "^1.0.5"
   },
   "devDependencies": {
-
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
