--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ stages:
   - build
   - name: deploy
     if: branch = master
+  - name: deploy-page
+  
 env:
   global:
     - REPO=addressparser
@@ -49,3 +51,11 @@ jobs:
       - if [[ $TRAVIS_BRANCH = master ]]; then docker push $ORG/$REPO:latest; else true; fi
       # push tag as well
       - if [[ $TRAVIS_TAG = $TRAVIS_BRANCH ]]; then docker push $ORG/$REPO:$TRAVIS_TAG; else true ; fi
+
+    - stage: deploy-page
+      provider: pages
+      skip-cleanup: true
+      github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+      keep-history: true
+      on:
+        branch: master
