--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
   global:
     - REPO=addressparser
     - ORG=g0vhk
-    - BASE_URL=HKAddressParser
+    - BASE_URL=$(basename $TRAVIS_REPO_SLUG) # Get the repo name from the slug "user_name/repo_name"
 
 cache: npm
 
