--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0",
     "eslint": "^5.6.0",
-    "rewire": "^4.0.1",
-    "eslint-plugin-node": "^7.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0"    
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
+    "mocha": "^5.2.0",
+    "rewire": "^4.0.1"
   }
 }
