--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "bluebird": "^3.5.2",
-    "commander": "^2.18.0"
+    "commander": "^2.18.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
