--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.5.17",
+    "vue-analytics": "^5.16.1",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-json-excel": "^0.2.96",
     "vue-router": "^3.0.1",
