--- a/web/package.json
+++ b/web/package.json
@@ -43,7 +43,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.4",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "sinon": "^7.2.3"
   },
   "postcss": {
     "plugins": {
